force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/Volunteer_Participant_Non_Salesforce__c.object-meta.xml
<CustomObject>
    <description>This object is for a second type of participant - those that are not Salesforce users. This would allow custom entries via a web-to-object without all of the workflow restrictions present in the VolunteerForce Participant custom object</description>
    <label>Volunteer Participant (Intranet)</label>
    <nameField>
        <displayFormat>VP-{000000000}</displayFormat>
        <label>Volunteer Participant - Non-Salesforce ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Participants (Intranet)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>