force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Email</label>
    <type>Email</type>
</CustomField>