force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_Hours__c.field-meta.xml
<CustomField>
    <fullName>Participant_Hours__c</fullName>
    <label>Participant Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>