force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>