force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Office_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Office Phone</label>
    <type>Phone</type>
</CustomField>