force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status__c</fullName>
    <label>Participant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed Up</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>