force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Participant_T_Shirt_Size__c</fullName>
    <label>Participant T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>