force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Participant_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Team_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Team Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>