force-app/main/default/objects/Volunteer_Participant_Non_Salesforce__c/fields/Volunteer_or_CRA_Activity_or_Event__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_or_CRA_Activity_or_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer or CRA Activity or Event</label>
    <referenceTo>Volunteer_Activity__c</referenceTo>
    <relationshipName>Volunteer_Participants_Non_Salesforce</relationshipName>
    <type>Lookup</type>
</CustomField>